# stock-analysis-chatbot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
tools/: fundamentals.py  market.py  news.py  news_test.py  trend.py
